--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,19 @@
 spring.application.name=ApiSecurity
 
 server.port=8081
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080  /realms/api-spring-boot
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/api-spring-boot
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/api-spring-boot/protocol/openid-connect/certs
+
+
+
+# URL do servidor de autenticação do Keycloak
+keycloak.auth-server-url=http://localhost:8080
+
+# Nome do client registrado no Keycloak
+keycloak.client-id=app_payment
+
+# Segredo do client (client secret)
+keycloak.client-secret=izN5uxNna0K35yqcP6ATr7AA1yLhza2K
+
+# Nome do realm
+keycloak.realm=api-spring-boot
