--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=ApiSecurity
 
+
+# DATABASE POSTGRES
+spring.datasource.url=jdbc:postgresql://localhost:5432/kafka
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+management.endpoints.web.exposure.include=*
+
+
 server.port=8081
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/api-spring-boot
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/api-spring-boot/protocol/openid-connect/certs
