--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,9 @@ keycloak.client-secret=6gIDq6RaRXEmYjX2htmmTCfh9YmiK5FA
 
 # Nome do realm
 keycloak.realm=api-spring-boot
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=test
+spring.rabbitmq.password=test
